[package]
name = "blimp"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "server/main.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "client"
path = "client/main.rs"

[dependencies]
tonic = "0.10"
tonic-reflection = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.10"